# DirectoryAccessChecker

./: CMakeLists.txt  README.md
proto/: directory.proto  requests.proto  responses.proto  service.proto
src/: Client.cpp  Server.cpp
src/access_checker/: AccessChecker.h  ResultType.h
src/access_checker/IO/: ConsoleIO.cpp  ConsoleIO.h  IOInterface.h
src/access_checker/directory_blocker/: AccessBlocker.cpp  AccessBlocker.h  DirectoryHolderClient.cpp  DirectoryHolderClient.h
src/access_checker/utils/: ConsoleUtils.h  GRPCConverter.h  PathChecker.h
src/directory_storage/: DirectoryStorage.cpp  DirectoryStorage.h  GRPCServer.cpp  GRPCServer.h  StorageInterface.h
tests/: AccessCheckerTest.cpp  DirectoryStorageTest.cpp  GRPCConverterTest.cpp  GRPCServerTest.cpp  PathCheckerTest.cpp
tests/mocks/: MockIO.h  MockStorage.h
